@@ -58,3 +58,6 @@
 :log_dir:	$BASEDIR/log
 :web_pid_file:	$BASEDIR/log/qwikweb.pid
 :ml_pid_file:	$BASEDIR/log/quickml.pid
+
+# experimental.
+:enable_ruby:	false
