@@ -58,3 +58,6 @@
 :log_dir:	/var/log/qwik
 :web_pid_file:	/var/run/qwik/qwikweb.pid
 :ml_pid_file:	/var/run/qwik/quickml.pid
+
+# experimental.
+:enable_ruby:	false
