@@ -1,3 +1,11 @@
+2007-08-09  Kouichirou Eto  <2007 eto.com>
+
+	* lib/qwik/act-ruby.rb: New plugin to embed ruby code.
+
+	* lib/qwik/config.rb: Add 'enable_ruby' setting.
+	* etc/config.txt: Ditto.
+	* etc/config-debug.txt: Ditto.
+
 2007-08-05  Kouichirou Eto  <2007 eto.com>
 
 	* lib/qwik/page-files.rb: Do not backup files in default.
